--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -14,15 +14,16 @@
             The ﬁrst ever video game was
         </p>
         <div class="about-me__languages">
-            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
-            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
-            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
-            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
-            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
-            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
-            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
-            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
-            <div class="about-me__languages-item"><img src="http://via.placeholder.com/50x60"></div>
+            <div class="about-me__languages-item"><img [src]="htmlImagePath"></div>
+            <div class="about-me__languages-item"><img [src]="cssImagePath"></div>
+            <div class="about-me__languages-item"><img [src]="ngImagePath"></div>
+            <div class="about-me__languages-item"><img [src]="ionImagePath"></div>
+            <div class="about-me__languages-item"><img [src]="jsImagePath"></div>
+            <div class="about-me__languages-item"><img [src]="typImagePath"></div>
+            <div class="about-me__languages-item"><img [src]="fbImagePath"></div>
+            <div class="about-me__languages-item"><img [src]="gitImagePath"></div>
+            <div class="about-me__languages-item"><img [src]="nodeImagePath"></div>
+            <div class="about-me__languages-item"><img [src]="styImagePath"></div>
         </div>
     </div>
     <div class="image">
