--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,17 @@
-<div class="welcome">
-  <h1 class="welcome__title">
+<div class="home">
+  <h1 class="home__title">
     Hi There,
   </h1>
-  <p class="welcome__paragraph">
+  <p class="home__paragraph">
     “Nice to meet you, I’m Jeroen a Full-Stack Developer”
   </p>
-  <div class="welcome__skew">
-    <p class="welcome__skew-meetme">
+  <div class="home__skew">
+    <!-- <p class="home__skew-meetme">
         Meet me!
     </p>
-    <!--<p class="welcome__skew-scrolldown">-->
-        <!--Scroll down-->
-    <!--</p>-->
-    <!--<div class="welcome__skew-arrow"></div>-->
+    <p class="home__skew-scrolldown">
+        Scroll down
+    </p>
+    <div class="home__skew-arrow"></div> -->
   </div>
 </div>
