--- a/src/app/shared/layouts/sidebar/sidebar.component.scss
+++ b/src/app/shared/layouts/sidebar/sidebar.component.scss
@@ -1,5 +1,4 @@
-@import "./src/assets/scss/base/variables";
-@import "./src/assets/scss/base/mixins";
+@import "./src/assets/scss/main";
 
 .sidebar {
     display: flex;
