--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,6 +1,4 @@
-@import "./src/assets/scss/base/variables";
-@import "./src/assets/scss/base/mixins";
-@import "./src/assets/scss/responsive/desktop-big";
+@import "./src/assets/scss/main";
 
 .about {
     display: flex;
@@ -74,9 +72,10 @@
     width: 100%;
     height: 55%;
     bottom: 286px;
-    position: relative;
     background: $orange;
     z-index: 19;
+    position: absolute;
+    bottom: 0px;
 
     &__scrolldown {
         @include skew (-5deg);
