--- a/src/app/blog-overview/blog-overview.component.scss
+++ b/src/app/blog-overview/blog-overview.component.scss
@@ -1,5 +1,4 @@
-@import "./src/assets/scss/base/variables";
-@import "./src/assets/scss/base/mixins";
+@import "./src/assets/scss/main";
 
 .blog-overview {
     background: $darkgrey;
@@ -18,7 +17,7 @@
         background: $purple;
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
         height: 250px;
         
@@ -26,13 +25,13 @@
             font-size: 66px;
             font-weight: 700;
             text-transform: uppercase;
-            margin: 0 0 0 -140px;
+            margin: 0 0 0 120px;
         }
         
         &-searchbar {
             height: 35px;
             width: 284px;
-            margin: 0 15px 0 0;
+            margin: 0 200px 0 0;
             padding: 5px 15px;
             border: none;
             background: $white;
