--- a/src/app/project-overview/ngxmatfire/ngxmatfire.component.html
+++ b/src/app/project-overview/ngxmatfire/ngxmatfire.component.html
@@ -5,10 +5,10 @@
         Angular Material Firebase
       </h1>
       <h5 class="info__client">Client</h5>
-      <p class="info__client-name">Name of Client</p>
+      <p class="info__client-name">Open Source</p>
 
       <h5 class="info__date">Date</h5>
-      <p class="info__date-time">mm / dd / yyyy</p>
+      <p class="info__date-time">04 / 2017 - now</p>
 
       <p class="info__paragraph">
         It won’t be a bigger problem to ﬁnd one video game lover in your neighbor.
@@ -19,7 +19,7 @@
       </p>
 
       <div class="info__link">
-        <a href="https://www.github.com" target="_blank" class="fa fa-link" aria-hidden="true"></a>
+        <a href="https://github.com/jeroenouw/AngularMaterialFirebase" target="_blank" class="fa fa-link" aria-hidden="true"></a>
       </div>
 
     </div>
@@ -28,7 +28,7 @@
       <div class="skill__container">
         <h5 class="skill__container-title">Skills used</h5>
         <p class="skill__container-items">
-          Angular 2, Grunt, Typescript, HTML, CSS, Gulp, Webpack, C#
+          Angular 4/5, Typescript, HTML5, CSS3, Firebase, Material Design, 0auth, NoSQL
         </p>
       </div>
     </div>
