--- a/src/app/project-overview/project/project.component.scss
+++ b/src/app/project-overview/project/project.component.scss
@@ -1,5 +1,4 @@
-@import "./src/assets/scss/base/variables";
-@import "./src/assets/scss/base/mixins";
+@import "./src/assets/scss/main";
 
 .project {
     display: flex;
@@ -104,7 +103,10 @@
             flex-direction: row;
             align-items: center;
             height: 250px;
+            width: -webkit-fill-available;
             background: $lightgreen;
+            position: absolute;
+            bottom: 0px;
             
             &__container {
                 margin: 95px 0 0 30px;
