--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,3 +3,4 @@
 @import "./src/assets/scss/base/functions";
 
 @import "./src/assets/scss/responsive/desktop-big";
+@import "./src/assets/scss/responsive/mobile";
