--- a/src/app/shared/layouts/header/header.component.html
+++ b/src/app/shared/layouts/header/header.component.html
@@ -1,5 +1,8 @@
 <div class="header">
     <button class="header__title header__title--hover" routerLink="/home">
       Jeroen Ouwehand
+      <div class="header__title-dev">
+        Full-Stack Developer
+      </div>
     </button>
   </div>
