--- a/src/app/shared/layouts/menu/menu-mobile.component.scss
+++ b/src/app/shared/layouts/menu/menu-mobile.component.scss
@@ -1,1 +1,7 @@
 @import "./src/assets/scss/main";
+
+@media screen and (max-width: 420px) and (min-width: 10px){
+    .menu__title {
+        display: none;
+    }
+}
