--- a/src/app/about-me/about-me-mobile.component.scss
+++ b/src/app/about-me/about-me-mobile.component.scss
@@ -1,1 +1,27 @@
 @import "./src/assets/scss/main";
+
+@media screen and (max-width: 420px) and (min-width: 10px){
+    .about {
+        height: 100vh;
+        margin-right: -90px;
+        padding: 0;
+        
+        .about-me {
+            width: 100%;
+            
+            &__title {
+                font-size: 37px;
+                margin: 30px 0;
+            }
+            
+            &__languages {
+                padding: 0;
+                margin: 0 0 0 -20px;
+            }
+        }
+    }
+    
+    .image {
+        display: none;
+    }
+}
