--- a/src/app/project-overview/project/project-mobile.component.scss
+++ b/src/app/project-overview/project/project-mobile.component.scss
@@ -1,1 +1,17 @@
 @import "./src/assets/scss/main";
+
+@media screen and (max-width: 420px) and (min-width: 10px){
+    .project {
+        padding: 50px 50px 0 0;
+        margin-right: -90px;
+        height: 100vh;
+        
+        .images {
+            display: none;
+        }
+        
+        .sidemenu {
+            display: none;
+        }
+    }
+}
