--- a/src/app/shared/layouts/header/header-mobile.component.scss
+++ b/src/app/shared/layouts/header/header-mobile.component.scss
@@ -1,1 +1,19 @@
 @import "./src/assets/scss/main";
+
+@media screen and (max-width: 420px) and (min-width: 10px){
+    .header {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+    
+        &__title {
+            padding: 21px 0;
+    
+            &-dev {
+                display: block;
+                font-weight: 500;
+                font-size: 24px;
+            }
+        }
+    }
+}
