--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -4,17 +4,15 @@
         About me.
         </h1>
         <p class="about-me__paragraph">
-            It won’t be a bigger problem to ﬁnd one video game lover in your neighbor.
-            Since the introduction of Virtual Game,
-            it has been achieving great heights so far as its popularity and technological advancement are concerned.
-            The history of video game is as interesting as a fairy tale.
-            The quality of today’s video game was not at all there when video game ﬁrst conceptualized and played ever.
-            During the formulative years, video games were created by using various interactive electronic devices with various
-            display formats.
-            The ﬁrst ever video game was
+            Employee at Competa IT as a full-stack developer. 
+            Doing multiple projects at the Competa office in an Agile (Scrum) environment.
+            As a employee I got the role of Scrum Master to support my team and guide them smoothly through the projects. 
+            Every sprint ends with giving a demo in front of a large audience. 
+            Besides accelerating my tech skills (JavaScript, Sass, Angular, task runners, PHP etc.) to a higher level, 
+            there is also time to develop soft skills.
         </p>
         <div class="about-me__languages">
-            <div class="about-me__languages-item"><img [src]="htmlImagePath"></div>
+            <!-- <div class="about-me__languages-item"><img [src]="htmlImagePath"></div>
             <div class="about-me__languages-item"><img [src]="cssImagePath"></div>
             <div class="about-me__languages-item"><img [src]="ngImagePath"></div>
             <div class="about-me__languages-item"><img [src]="ionImagePath"></div>
@@ -23,18 +21,17 @@
             <div class="about-me__languages-item"><img [src]="fbImagePath"></div>
             <div class="about-me__languages-item"><img [src]="gitImagePath"></div>
             <div class="about-me__languages-item"><img [src]="nodeImagePath"></div>
-            <div class="about-me__languages-item"><img [src]="styImagePath"></div>
+            <div class="about-me__languages-item"><img [src]="styImagePath"></div> -->
         </div>
     </div>
     <div class="image">
-        <!-- <div class="image__item"><img src="http://via.placeholder.com/450x630"></div> -->
         <img class="image__item" [src]="fullImagePath">
     </div>
     <div class="skew">
-        <div class="skew__scrolldown">
+        <!-- <div class="skew__scrolldown">
             <p class="skew__scrolldown-paragraph">
                 View the projects i've worked on
             </p>
-        </div>
+        </div> -->
     </div>
 </div>
