--- a/src/app/project-overview/ngxionic/ngxionic.component.html
+++ b/src/app/project-overview/ngxionic/ngxionic.component.html
@@ -2,20 +2,20 @@
   <div class="content-left">
     <div class="info">
       <h1 class="info__title">
-        Angular Material Firebase
+        Angular Ionic
       </h1>
       <h5 class="info__client">Client</h5>
       <p class="info__client-name">Open Source</p>
       
       <h5 class="info__date">Date</h5>
-      <p class="info__date-time">04 / 2017 - now</p>
+      <p class="info__date-time">05 / 2017 - 06 / 2017</p>
       
       <p class="info__paragraph">
-        Full stack starter app, Angular 5 front-end with Material Design and Firebase back-end (0Auth authentication and NoSQL database).
+        Angular Ionic mobile application with a REST API and observables to get information from the Github API.
       </p>
       
       <div class="info__link">
-        <a href="https://github.com/jeroenouw/AngularMaterialFirebase" target="_blank" class="fa fa-link" aria-hidden="true"></a>
+        <a href="https://github.com/jeroenouw/AngularIonic" target="_blank" class="fa fa-link" aria-hidden="true"></a>
       </div>
       
     </div>
@@ -24,11 +24,12 @@
       <div class="skill__container">
         <h5 class="skill__container-title">Skills used</h5>
         <p class="skill__container-items">
-          Angular 4/5, Typescript, HTML5, CSS3, Firebase, Material Design, 0auth, NoSQL
+          Angular 4, Typescript, HTML5, CSS3, Ionic, Cordova, REST API, Github API
         </p>
       </div>
     </div>
   </div>
+  
   
   <div class="images">
     <div class="images__item images__item--full"><img [src]="onlyImagePath"></div>
