--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,5 +2,7 @@
 @import "./src/assets/scss/base/mixins";
 @import "./src/assets/scss/base/functions";
 
+@import "./src/assets/scss/responsive/desktop-small";
 @import "./src/assets/scss/responsive/desktop-big";
 @import "./src/assets/scss/responsive/mobile";
+@import "./src/assets/scss/responsive/tablet";
