--- a/src/app/about-me/about-me-mobile.component.scss
+++ b/src/app/about-me/about-me-mobile.component.scss
@@ -2,7 +2,7 @@
 
 @media screen and (max-width: 420px) and (min-width: 10px){
     .about {
-        height: 100vh;
+        height: calc(100vh - -90px);
         margin-right: -90px;
         padding: 0;
         
