--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -27,7 +27,8 @@
         &__paragraph {
             font-size: 16px;
             font-weight: 400;
-            margin: 10px 0;
+            margin: 10px 0; 
+            text-align: justify;
         }
         
         &__languages {
@@ -71,11 +72,10 @@
     justify-content: center;
     width: 100%;
     height: 55%;
-    bottom: 286px;
     background: $orange;
     z-index: 19;
     position: absolute;
-    bottom: 0px;
+    bottom: -4px;
     
     &__scrolldown {
         @include skew (-5deg);
