--- a/src/app/blog-overview/blog/blog.component.scss
+++ b/src/app/blog-overview/blog/blog.component.scss
@@ -23,6 +23,7 @@
         
         &-container {
             margin: 0 0 0 120px;
+            text-align: justify;
         }
         
         &-date {
