--- a/src/app/project-overview/project/project.component.scss
+++ b/src/app/project-overview/project/project.component.scss
@@ -14,6 +14,7 @@
     .content-left {
         display: flex;
         flex-direction: column;
+        width: 100%;
         
         .info {
             
@@ -61,6 +62,7 @@
                 padding: 0 50px;
                 margin: 10px 0;
                 word-wrap: break-word;
+                text-align: justify;
             }
             
             &__link {
@@ -134,18 +136,38 @@
         z-index: 10;
         
         &__item {
+
+            &--full {
+                height: calc(100vh - 53px);
+                width: calc(50vw - 120px);
+                
+                & img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
             
             &--wide {
-                background-color: #eee; // Temporary 
+                // background-color: #eee; // Temporary 
                 height: calc(50vh - 53px);
                 width: 600px;
+                
+                & img {
+                    width: 100%;
+                    height: 100%;
+                }
             }
             
             &--small {
-                background-color: #ddd; // Temporary 
+                // background-color: #ddd; // Temporary 
                 display: table-cell;
                 height: calc(50vh - 90px);
                 width: 300px;
+                
+                & img {
+                    width: 100%;
+                    height: 100%;
+                }
             }
         }
     }
@@ -169,7 +191,7 @@
             background: $darkgrey;
             color: $white;
             padding: 20px;
-            width: 280px;
+            width: 320px;
             z-index: 18;
             position: absolute;
             margin-right: 100px;
@@ -190,7 +212,7 @@
         &__btn {
             display: inline-flex;
             text-decoration: none;
-            width: 190px;
+            width: 230px;
             
             &:focus {
                 outline: none;
