--- a/src/assets/scss/responsive/_desktop-big.scss
+++ b/src/assets/scss/responsive/_desktop-big.scss
@@ -1,5 +1,24 @@
 @media screen and (min-width: 1900px){
     .skew {
-        margin-top: -90px;
+        clip-path: polygon(0 30%, 0 100%, 100% 100%, 100% 70%);
+        height: 82%;
+    }
+
+    .project {
+        .images {
+            &__item {
+                &--full {
+                    width: calc(50vw - 400px);
+                }
+
+                &--wide {
+                    width: calc(50vw - 465px);
+                }
+                
+                &--small {
+                    width: calc(50vw - 660px);
+                }
+            }
+        }
     }
 }
