--- a/src/assets/scss/responsive/_mobile.scss
+++ b/src/assets/scss/responsive/_mobile.scss
@@ -1,17 +1,12 @@
 @media screen and (max-width: 420px) and (min-width: 10px){
     .wrapper .app-footer, 
-    .wrapper .app-sidebar, 
-    // .wrapper .app-menu, 
-    //.wrapper .example-sidenav-content 
-    {
+    .wrapper .app-sidebar {
         display: none;
     }
 
-    
     .wrapper .app-menu, 
     .wrapper .example-sidenav-content {
         height: 72px;
         margin: -3px 5px 0 0;
     }
-    
 }
